# rkit

./: .gitignore  Cargo.toml  deny.toml  index.html  justfile  todo.txt
crates/app/: Cargo.toml
crates/app/src/: app.rs  builder.rs  lib.rs  window.rs
crates/assets/: Cargo.toml
crates/assets/src/: events.rs  lib.rs  list.rs  load_file.rs  loader.rs  waker.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  manager.rs  sound.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: app.rs  builder.rs  events.rs  gfx.rs  input.rs  lib.rs  math.rs  time.rs  utils.rs  window.rs
crates/core/src/app/: window.rs
crates/core/src/backend/: backend.rs  gamepad_gilrs.rs  gfx_wgpu.rs  mod.rs  traits.rs  winit.rs
crates/core/src/backend/web/: events.rs  input.rs  mod.rs  utils.rs  window.rs
crates/core/src/backend/wgpu/: bind_group.rs  buffer.rs  context.rs  frame.rs  gfx.rs  mod.rs  offscreen.rs  pipeline.rs  render_texture.rs  surface.rs  texture.rs  utils.rs
crates/core/src/gfx/: bind_group.rs  buffer.rs  builders.rs  color.rs  consts.rs  pipeline.rs  renderer.rs  texture.rs
crates/core/src/input/: gamepad.rs  keyboard.rs  mouse.rs  touch.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: app.rs  builder.rs  events.rs  gfx.rs  input.rs  lib.rs  math.rs  time.rs  utils.rs
crates/corelib/src/app/: logger.rs  window.rs
crates/corelib/src/backend/: gamepad_gilrs.rs  headless.rs  limiter.rs  mod.rs  traits.rs  winit.rs
crates/corelib/src/backend/web/: input.rs  mod.rs  utils.rs  window.rs
crates/corelib/src/backend/wgpu/: bind_group.rs  buffer.rs  context.rs  gfx.rs  mod.rs  offscreen.rs  pipeline.rs  surface.rs  texture.rs
crates/corelib/src/gfx/: bind_group.rs  buffer.rs  builders.rs  color.rs  limits.rs  pipeline.rs  renderer.rs  stats.rs  texture.rs
crates/corelib/src/input/: gamepad.rs  keyboard.rs  mouse.rs
crates/draw/: Cargo.toml
crates/draw/src/: atlas.rs  lib.rs  render_sprite_cache.rs  shapes.rs  sprite.rs  text.rs
crates/draw/src/m2d/: camera.rs  color_text.rs  draw2d.rs  draw_2d.rs  images.rs  images_2d.rs  mat3_stack.rs  mod.rs  nine_slice.rs  painter.rs  painter_2d.rs  pattern.rs  pixel.rs  shapes_2d.rs  text.rs  text_2d.rs
crates/draw/src/m2d/batch/: circle.rs  circles.wgsl  mod.rs  sprite.rs  sprites.wgsl  utils.rs
crates/draw/src/m2d/shapes/: cirlce.rs  ellipse.rs  line.rs  mod.rs  path.rs  polygon.rs  rectangle.rs  star.rs  triangle.rs
crates/draw/src/resources/: to_linear.wgsl
crates/macros/: Cargo.toml
crates/macros/src/: assets.rs  lib.rs
crates/math/: Cargo.toml
crates/text/: Cargo.toml  README.md
crates/utils/: Cargo.toml
crates/utils/src/: drop_signal.rs  fast_cache.rs  helpers.rs  lib.rs  local_pool.rs  ring_buffer.rs
examples/: app_ecs.rs  app_ecs_assets.rs  app_ecs_assets_auto_load.rs  app_ecs_audio.rs  app_ecs_bunnymark.rs  app_ecs_custom_assets.rs  app_ecs_egui.rs  app_ecs_egui_demo.rs  app_ecs_events.rs  app_ecs_particles.rs  app_ecs_screen.rs  app_ecs_ui.rs  app_ecs_ui2.rs  app_ecs_ui_cam.rs  app_headless.rs  app_save.rs  audio_basic.rs  basic.rs  basic2.rs  draw_arcs.rs  draw_bunnymark.rs  draw_camera_2d.rs  draw_camera_2d_aspect_fit.rs  draw_circle.rs  draw_circle_batch.rs  draw_color_text.rs  draw_colors.rs  draw_image.rs  draw_image_crop.rs  draw_image_filters.rs  draw_image_replace_shader.rs  draw_image_shader.rs  draw_nui.rs  draw_nui2.rs  draw_path.rs  draw_path_flower.rs  draw_path_wave.rs  draw_pattern.rs  draw_rectangle.rs  draw_shapes.rs  (+57 more)
examples/assets/: data.txt
examples/assets/arcade-legacy/: readme.txt
src/: lib.rs  or_panic.rs  prelude.rs  random.rs  save.rs  timer.rs  utils.rs
src/assets2/: events.rs  mod.rs  waker.rs
src/ecs/: app.rs  audio.rs  exit.rs  gamepad.rs  input.rs  locale.rs  log.rs  mod.rs  plugin.rs  prelude.rs  schedules.rs  screen.rs  time.rs  tween.rs  window.rs
src/ecs/gamepad/: data.rs  gamepads.rs  mod.rs
src/ecs/ui/: command.rs  components.rs  ctx.rs  layout.rs  mod.rs  plugin.rs  prelude.rs  style.rs  widgets.rs
src/egui/: egui.wgsl  mod.rs  painter.rs
src/filters/: blur.rs  color_replace.rs  gray_scale.rs  mod.rs  pixelate.rs  rgb_split.rs  sys.rs
src/nui/: ctx.rs  layout.rs  mod.rs  node.rs  prelude.rs  style.rs
src/particles/: mod.rs  particles.aseprite  particles.json
src/postfx/: alpha_fx.rs  blur_fx.rs  color_replace_fx.rs  crt_fx.rs  gray_scale_fx.rs  mod.rs  pfx.rs  pixelate_fx.rs  rgb_split_fx.rs  shadow_fx.rs  sys.rs
src/save/: driver.rs  file_sys.rs  local_storage.rs  mod.rs
src/tween/: easing.rs  mod.rs  tween_map.rs  tweens.rs
src/ui/: element.rs  events.rs  graph.rs  manager.rs  mod.rs
