[package]
name = "rkit"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/rkit"
repository = "https://github.com/Nazariglez/rkit"
license = "MIT OR Apache-2.0"
description = ""

[profile.release]
# optimize for speed and size
opt-level = 2
# link time optimization
lto = true
# remove debug symbols
strip = true
# do not parallelize optimizations
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# gamekit packages
corelib = { path = "crates/corelib" }
utils = { path = "crates/utils" }
draw = { path = "crates/draw" }
macros = { path = "crates/macros" }
audio = { path = "crates/audio" }
assets = { path = "crates/assets" }

## common deps
log = "0.4.25"
raw-window-handle = "0.6.2"
atomic_refcell = "0.1.13"
serde = { version = "1.0", features = ["serde_derive"] }
rkyv = "0.8.10"
heapless = "0.8.0"
arrayvec = "0.7.6"
nohash-hasher = "0.2.0"
smol_str = "0.3.2"
lazy_static = "1.5.0"
bytemuck = "1.21.0"
encase = { version = "0.10.0", features = ["glam", "arrayvec", "smallvec"] }
smallvec = "2.0.0-alpha.10"
once_cell = "1.20.2"
rayon = "1.10.0"
rustc-hash = "2.1.0"
num = "0.4.3"
parking_lot = "0.12.3"
web-sys = "0.3.77"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
strum = "0.26.3"
strum_macros = "0.26.4"
web-time = { version = "1.1.0", default-features = false }

[dependencies]
corelib.workspace = true
utils.workspace = true
macros.workspace = true
draw = { workspace = true, optional = true }
audio = { workspace = true, optional = true }
assets = { workspace = true, optional = true }

log.workspace = true
rustc-hash.workspace = true

fastrand = { version = "2.3.0", optional = true }

# used on filters TODO maybe this must be optional under the filter feature?
atomic_refcell.workspace = true
once_cell.workspace = true
encase.workspace = true

# used for ui
downcast-rs = { version = "2.0.1", optional = true }
scene-graph = { version = "0.1.0", optional = true }
smallvec = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
heapless = { workspace = true, optional = true }

# ecs deps
bevy_ecs = { version = "0.15", default-features = false, features = ["multi_threaded"], optional = true }
bevy_tasks = { version = "0.15", default-features = false, features = ["multi_threaded"], optional = true }
web-time = { workspace = true, optional = true }
taffy = { version = "0.7.5", optional = true }

rand = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = { version = "2.3.0", optional = true, features = ["js"] }

[dev-dependencies]
log.workspace = true
bytemuck = {workspace = true, features = ["derive"]}
shipyard = "0.7.5"
static_assertions = "1.1.0"

[features]
default = ["random", "draw", "draw-default-font", "audio", "assets", "logs", "ui"]
# enable loggin
logs = ["corelib/logs"]
# enables gamepad api
gamepad = ["corelib/gamepad"]
# force webgl
webgl = ["corelib/webgl", "draw/webgl"]
# enable fastrand random
random = ["dep:fastrand"]
# enables draw API
draw = ["dep:draw"]
# enables audio API
audio = ["dep:audio"]
# enabels async assets loading
assets = ["dep:assets"]
# included a default font
draw-default-font = ["draw?/default-font"]
# post process effects
postfx = []
# ui elements
ui = ["draw", "dep:downcast-rs", "dep:scene-graph", "dep:smallvec", "dep:heapless", "dep:strum", "dep:strum_macros"]
# enable ecs/app
ecs = ["dep:bevy_ecs", "dep:bevy_tasks", "macros/ecs", "dep:web-time", "dep:taffy"]
