[package]
name = "assets"
edition = "2021"

[dependencies]
corelib.workspace = true
log.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
once_cell.workspace = true
atomic_refcell.workspace = true

futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false }
indexmap = "2.6.0"
thunderdome = "0.6.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["XmlHttpRequest", "XmlHttpRequestEventTarget", "XmlHttpRequestResponseType"] }
js-sys.workspace = true
wasm-bindgen.workspace = true