[package]
name = "corelib"
edition = "2021"
build = "build.rs"

[dependencies]
# gk dependencies
utils.workspace = true

# external common deps
log.workspace = true
nohash-hasher.workspace = true
heapless.workspace = true
atomic_refcell.workspace = true
arrayvec.workspace = true
smol_str.workspace = true
bytemuck.workspace = true
smallvec.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true
encase.workspace = true

# app/windowing
winit = "0.30.9"
raw-window-handle = "0.6.2"

# math
glam = { version = "0.29", features = ["bytemuck", "debug-glam-assert"] }

# gfx
pollster = "0.4"
wgpu = { version = "24.0.1", features = ["fragile-send-sync-non-atomic-wasm"] }

# gamepad
gilrs = { version = "0.11", optional = true }

# Instant compatible with wasm
web-time.workspace = true

# Process images
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp", "rayon"] }

## deps only for this crate
strum.workspace = true
strum_macros.workspace = true
crossbeam-channel = "0.5.14"

# loggin
fern = { version = "0.7.1", optional = true, features = ["colored"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.3.37", optional = true, features = ["formatting", "local-offset"] }
spin_sleep_util = "0.1.1"

# wasm deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures = "0.4.50"

console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
workspace = true
features = [
    "Screen",
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "Node",
    "DomRect",
    "DomRectReadOnly",
    "HtmlCanvasElement",
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
    "XmlHttpRequestResponseType",
    "Event",
    "EventListener",
    "EventTarget",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "PointerEvent",
    "CompositionEvent",
    "CssStyleDeclaration",
]


[features]
# Hackish, to add environment variables for test builds
test-env = []
# WebGL instead of WebGPU on WASM
webgl = ["wgpu/webgl"]
# Enable Gamepad API
gamepad = ["dep:gilrs"]
# Logging
logs = ["dep:time", "dep:fern", "dep:console_log", "dep:console_error_panic_hook"]

[dev-dependencies]
# Hackish, to add environment variables for test builds
corelib = { path = ".", features = ["test-env"]}
