[package]
name = "draw"
edition = "2021"

[dependencies]
core.workspace = true
utils.workspace = true

log.workspace = true
smallvec.workspace = true
once_cell.workspace = true
atomic_refcell.workspace = true
heapless.workspace = true
arrayvec.workspace = true
rayon.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true
num.workspace = true

internment = "0.8.4"
lyon = "1.0.1"

lru = { version = "0.12.4" , default-features = false }
etagere = "0.2.13"
cosmic-text = "0.12.1"

[features]
default = []
default-font = []
