[package]
name = "draw"
edition = "2024"

[dependencies]
corelib.workspace = true
utils.workspace = true
macros.workspace = true

log.workspace = true
smallvec.workspace = true
once_cell.workspace = true
atomic_refcell.workspace = true
arrayvec.workspace = true
rustc-hash.workspace = true
num.workspace = true

lyon = "1.0.1"

etagere = "0.2.15"
cosmic-text = "0.12.1"

[features]
default = []
default-font = []
webgl = []
