[package]
name = "macros"
edition = "2024"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
globset = { version = "0.4", optional = true }
ignore = { version = "0.4", optional = true }
proc-macro-error2 = { version = "2", optional = true }
heck = { version = "0.5", optional = true }
unicode-ident = { version = "1", optional = true }

[features]
default = ["assets", "ecs"]
ecs = []
assets = [
    "dep:globset",
    "dep:ignore",
    "dep:proc-macro-error2",
    "dep:heck",
    "dep:unicode-ident",
]
